Revert 'list' mode first

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Infinito³ News - Últimas notícias sobre Ciência, Tecnologia e Cultura Pop.</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-<body class="list-view"> <!-- Adicione a classe list-view aqui -->
+<body>
     <div class="header">
         <img style="margin-right: 10px;" height="40px" src="https://infinitoaocubo.com.br/img/infinito3.png" alt="Infinito ao Cubo">
         <h1>News</h1>
