--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <div class="slogan"><small>Apenas um agregador de notícias sobre Ciência, Tecnologia e Cultura Pop.</small></div>
     <div id="filters" class="filters"></div>
     <div id="feed" class="feed"></div>
+    <div id="pagination" class="pagination"></div> <!-- Adiciona a seção de paginação -->
     <div class="site-footer">
         <p>Infinito³ News é apenas um agregador de notícias sobre Ciência, Tecnologia e Cultura Pop.</p>
         <img src="https://infinitoaocubo.com.br/img/infinito3.png" alt="Infinito ao Cubo">
