--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,19 @@
             <h1>News</h1>
         </div>
     </a>
-    <div class="slogan"><small>Apenas um agregador de notícias sobre Ciência, Tecnologia e Cultura Pop.</small></div>
+    <!-- <div class="slogan"><small>Apenas um agregador de notícias sobre Ciência, Tecnologia e Cultura Pop.</small></div> -->
     <div id="filters" class="filters"></div>
+    <div id="search-container" class="search-container"></div> <!-- Adiciona um contêiner para a barra de pesquisa -->
     <div id="feed" class="feed"></div>
     <div id="pagination" class="pagination"></div> <!-- Adiciona a seção de paginação -->
     <div class="site-footer">
         <p>Infinito³ News é apenas um agregador de notícias sobre Ciência, Tecnologia e Cultura Pop.</p>
         <img src="https://infinitoaocubo.com.br/img/infinito3.png" alt="Infinito ao Cubo">
+        <div class="disclaimer" style="font-size: 0.8em; color: #666; margin-top: 20px; text-align: center;">
+            <p>Infinito³ News atua exclusivamente como um agregador de conteúdo focado em ciência, tecnologia e cultura pop. Nosso objetivo é oferecer uma seleção diversificada de artigos provenientes de diversas fontes confiáveis, utilizando feeds RSS disponibilizados por essas próprias fontes. 
+                Nenhum dos artigos apresentados aqui é criado ou editado por nossa equipe. Todo o conteúdo exibido é capturado diretamente dos feeds RSS de terceiros. Dessa forma, todas as informações, opiniões e pontos de vista expressos nos artigos são de responsabilidade exclusiva dos respectivos autores e fontes originais.
+                Nós nos comprometemos a fornecer uma experiência informativa e agradável, mas recomendamos que os usuários verifiquem as informações diretamente nas fontes originais para uma maior precisão e contexto. Agradecemos por utilizar nossa plataforma e esperamos que aproveite o conteúdo oferecido.</p>
+        </div>
     </div>
     <div class="loading-overlay" id="loadingOverlay">
         <div class="spinner"></div>
