--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             <h1>News</h1>
         </div>
     </a>
-    <!-- <div class="slogan"><small>Apenas um agregador de notícias sobre Ciência, Tecnologia e Cultura Pop.</small></div> -->
+    <div class="slogan"><small>Apenas um agregador de notícias sobre Ciência, Tecnologia e Cultura Pop.</small></div>
     <div id="filters" class="filters"></div>
     <div id="search-container" class="search-container"></div> <!-- Adiciona um contêiner para a barra de pesquisa -->
     <div id="feed" class="feed"></div>
